--- a/app/views/static_pages/exhibition.html.haml
+++ b/app/views/static_pages/exhibition.html.haml
@@ -1,7 +1,7 @@
 = provide(:title, 'Exhibition')
 .container
-  .exhibition-page
-  %h1.first-title in.print.out - Grafik in/auswendig
+  #exhibition-page
+  %h1.big-title in.print.out - Grafik in/auswendig
   %h3.date 19.04. - 09.06. 2013
   %h3.location Künstlerhaus Wien
  
