--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html(lang="en")
   %head
     %meta(charset="utf-8")
+    %meta{:content => "initial-scale=1.0, width=device-width", :name => "viewport"}
     %title 
       Triennale | #{yield(:title)}
     = stylesheet_link_tag    "application", :media => "all"
