--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -78,8 +78,8 @@ body {
     width: 25%
   }
   .social-media {
-    width: 50%;
-    float: left;
+    width: 25%;
+    float: right;
   }
   .context-title {
     clear: both;
@@ -111,17 +111,8 @@ body {
     width: 170px;
   }
   .k-h-wrapper {
-    width: 50px;;
-    .k-h-logo-text {
-        display: none;
       }
   }
-  .social-media {
-    width: 50%;
-    float: right;
-  }
-  
-}
 
 @media screen and (max-width: 710px) {
   .image-boxes {
@@ -139,6 +130,12 @@ body {
   }
   .k-h-logo-text {
     display: none;
+  }
+  .k-h-wrapper {
+    width: 50px;
+  }
+  .social-media {
+    width: 50%;
   }
 } 
 
@@ -165,6 +162,12 @@ body {
         width: 318px;
         height: auto;
       }
+    }
+  }
+  .social-media {
+    img {
+      float: left;
+      padding-right: 0px;
     }
   }
 }
