--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,5 +3,19 @@
     %a.logo{ :href => '/static_pages/home' } in.print.out
     .k-h-wrapper
       = link_to image_tag("K-Haus-Logo-non-hover.jpg", :mouseover => "K-Haus-Logo-hover.jpg", :alt => "Künstlerhaus-Logo-Link", :class => "k-h_logo"), "http://www.k-haus.at/", :target => "_blank"
-      %p.k-h-logo-text k/haus
-    %a.social-media{ :href => '#' } FB
+      .k-h-logo-text
+        = link_to image_tag("Kuenstlerhaus.jpg", :alt => "Kuenstlerhaus-Link", :class => ""), "http://www.k-haus.at/", :target => "_blank"
+ 
+    .social-media
+      .top
+        = link_to image_tag("white-fb-icon.png", :class => "top")       
+        = link_to image_tag("white-fb-icon-hover.png")
+        = link_to image_tag("white-tumblr-icon.png", :class => "bottom")
+        = link_to image_tag("white-tumblr-icon-hover.png", :class => "bottom")
+
+
+
+      //= link_to image_tag("white-fb-icon.png", :mouseover => "white-fb-icon-hover.png", :alt => "Facebook-Link", :class => ""), "http://www.facebook.com/", :target => "_blank"
+      //= link_to image_tag("white-tumblr-icon.png", :mouseover => "white-tumblr-icon-hover.png", :alt => "Tumblr-Link", :class => ""), "http://www.tumblr.com/", :target => "_blank"
+
+
