--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,10 +8,10 @@
  
     .social-media
       .top
-        = link_to image_tag("white-fb-icon.png", :class => "top")       
-        = link_to image_tag("white-fb-icon-hover.png")
-        = link_to image_tag("white-tumblr-icon.png", :class => "bottom")
-        = link_to image_tag("white-tumblr-icon-hover.png", :class => "bottom")
+        = link_to image_tag("white-fb-icon-hover.png", :class => "top")
+        = link_to image_tag("white-fb-icon.png", :class => "bottom")       
+        = link_to image_tag("white-tumblr-icon-hover.png", :class => "top")
+        = link_to image_tag("white-tumblr-icon.png", :class => "top")
 
 
 
