--- a/app/views/static_pages/program.html.haml
+++ b/app/views/static_pages/program.html.haml
@@ -1,1 +1,130 @@
-ggggg
+= provide(:title, "Begleitprogramm")
+.container
+  #program-page
+    %h1.big-title k/hausgalerie
+    %h2.sub-title Josef Albers -  Interaction of Color 
+    %h3.date 20.4. - 12.5.2013
+    %h3.date  Eröffnung 19.4.2013 - 19 Uhr
+
+    %p.main-intro-text  Anlässlich des 125 Geburtstages von Josef Albers
+    %p „interaction of color“ besteht aus 81 losen Doppel-Farb-Tafeln, davon 152 Originalsiebdrucken mit 580 gedruckten Farben. Die amerikanische Ausgabe erschien 1963 bei der yale university press und die deutsche Ausgabe 1973 im Josef Keller Verlag, Starnberg. Gezeigt wird die deutsche Ausgabe von Albers' berühmter Farbtheorie. Albers widmete diese Publikation seinen Schülern: "Dieses Buch ist mein Dank an meine Studenten". Josef Albers stellt in diesem Mappenwerk die Praxis des Betrachtens von Farbe vor die akademische Tradition der Farbtheorie. Phänomene wie Farbtäuschung, Transparenz und Raumillusion, Farbtemperatur, Helligkeitswert und viele andere werden durch das Sehen hinterfragt. Dieses Lehr-Werk ist nicht nur ein Schlüssel zum Werk von Josef Albers sondern zur Wirkung von Farbe überhaupt.
+    %p.date Kurator: Fritz Ruprechter
+
+
+    <hr class="hr-top">
+    <hr class="hr-bottom">
+    
+    %h1.big-title kresh 
+    %h2.sub-title “Im”possibilities
+    %h3.date 17.5. - 16.6.2013
+
+    %h2.sub-title Wladyslaw Pluta
+    %h3.date 19.4. - 7.5.2013
+    %h3.date  Eröffnung 19.4. 2013 - 18.30 Uhr
+
+    %p <strong>Wladyslaw Pluta</strong> wurde 1949 in Jeleń geboren. Von 1968 bis 74 studierte er an der Kunstakademie in Krakau an der Fakultät für Industrial Design. Er erwarb sein Diplom bei  Professor Ryszard Otręba. Seit 1974 unterrichtet Pluta am Department of Visual Communication an seiner alma mater. Er arbeitet als graphic designer und Künstler, beteiligte sich an zahlreichen Ausstellungen in Polen und international. Zusätzlich zu seinen Preisen auf den Gebieten Plakatgestaltung und Buchdesign, wurde er mehrfach für seine künstlerische und pädagogische Arbeit geehrt. "Pluta ist ein Meister des ersten Eindrucks. Die meisten seiner Plakate funktionieren für mich wie ein Nagel, der in das Gehirn getrieben wird.” (Krzysztof Lenk)
+ 
+    %h2.sub-title Marek Freudenreich 
+    %h3.date 7.5. - 26.5.2013
+    %h3.date  Eröffnung 7.5. 2013 - 18.30 Uhr
+
+    %p <strong>Marek Freudenreich</strong> geboren 1939, studierte Graphic Design in Warschau, teilte sein berufliches Leben zwischen  Österreich und seiner Heimat Sejnenszczyzna in Polen. Er lehrte von 1985 bis 2007 an der Kunstuniversität Linz visuelle Kommunikation im Bereich Mediengestaltung. Seit 2009 ist er in der Abteilung New Media Art am polnisch-japanischen „Institute of Information Technology“ in Gdansk tätig. Freudenreich wurde mit internationalen Preisen ausgezeichnet u.a. 1967 Best Poster of the Year, Warsaw, 1989 Werbe Grand Prix, Wien. Seine Plakate befinden sich in internationalen Sammlungen in Europa und Amerika. Sein Credo: „Handle in einer als Massenkommunikation verstandenen grafischen Gestaltung so, als ob du selbst der Adressat deren Wirkung wärst. Die grafische Gestaltung ist nicht nur ein Handwerk, sie hat auch die Macht, eine Wirklichkeit zu erschaffen; schaffen wir also keine Wirklichkeit, die wir nicht selbst erfahren möchten.“
+
+
+    <hr class="hr-top">
+    <hr class="hr-bottom">
+
+    %h1.big-title passagegalerie 
+    %h2.sub-title Jubiläumsdruckmappe Rote Fabrik
+    %h2.date 20.4. - 28.4.2013
+    %h2.date Eröffnung 19.4.2013 - 18 Uhr
+
+    %p.main-intro-text Die Rote Fabrik feierte 2010 Ihr 30-jähriges Bestehen als Kulturfabrik.
+    %p Zu diesem Jubiläum der Roten Fabrik und des Druckateliers haben der Künstlerverein und die Betreuer des Druckateliers als  Inizianten das Projekt Jubiläumsdruckmappe realisiert. Es war so nicht geplant, aber zum Schluss beteiligten sich dreissig Künstler an diesem Projekt. Es entstanden fünf Siebdrucke, zwei Hochdrucke, drei Pigmentdrucke, eine Monotypie und zwanzig Tiefdrucke. Die kleine Auflage von dreissig Exemplaren macht diese Jubiläumsdruckmappe zur Exklusivität. Das Format aller Originaldruckgrafiken ist 30 x 30 cm und zeigt in eindrücklicher Weise Kleines und Feines aus der Roten Fabrik. Alle beteiligten Künstler haben zu diesem Anlass ihren persönlichen Beitrag mit ihrer Handschrift zum Thema Fabrik und Kunst geleistet.
+
+    %h2.artists-headline KünstlerInnen:
+    %p Astrid Amadeo, Sonja Amsler, Ian Anüll, Luigi Archetti, Eva Bertschinger, Marketa Bartos, Brigitte Friedlos, Federica Gärtner, Werner Graf, Christian Grossert, Pascal Häusermann, Alex Herzog, Rosina Kuhn, Gregor Lanz, Dave LaMarr, Mara Mars, Albert Mauerhofer, Kesang Namgayal Lamdark. Ann Nelson, Marion Richter, Venice Spescha, Sämi Scherrer, Lisa Schiess, Klaudia Schifferle, Peter Schneebeli, Maya Stockmann, Teres Wydler, Hans X.Hagen, Marc Zeier, Lamia Moghazy (Artist in Residence, Ägypten)   
+ 
+
+
+    %p.date.padding Informationen und Auskünfte:
+    %p.date art@astrid-amadeo.ch
+    %p.date +41 78 754 50 90
+    %p.date www.druckatelier-rf.ch
+
+    
+    %p.sub-title.padding-big Workshops in der Passage
+    %h2.date 02. - 29.5.2013
+    
+    %p Als ein wichtiges Vermittlungsprogramm wird in der Passagegalerie temporär eine Druckgrafikwerkstatt mit Schwerpunkt Siebdruck für SchülerInnen ab der 5. Schulstufe, sowie Kunst- und DesignstudentInnen eingerichtet. Besonders der experimentelle  und gemeinschaftliche Zugang zur Druckgrafik soll forciert werden. Erstmals kann das Künstlerhaus in Zusammenarbeit mit der Inoperable - Galerie auch Streetart KünstlerInnen für eine Zusammenarbeit gewinnen und so die Möglichkeit bieten, die Schablonen – Graffitiherstellung und Anwendung kennen zu lernen. Zusätzlich werden für die Schulklassen Vorträge und Führungen durch die Ausstellung angeboten. Die in den Workshops entstandenen Arbeiten werden an den Wänden der Passagegalerie und der Passage zur U-Bahn präsentiert.
+    <br>
+    %p.date Organisation: Natalia Weiss
+    %p Die Workshops werden von Kultur Kontakt Austria gefördert. KulturKontakt Austria fördert die aktive Kunst- und Kulturvermittlung im schulischen Zusammenhang.
+    = link_to(image_tag("Kulturkontakt_Austria.jpg", :alt => "Kulturkontakt Logo"), "http://www.kulturkontakt.or.at/", :target => "_blank")
+ 
+    
+
+    %p.big-title Monika Piorkowska 
+    %p.sub-title Zwischen Transparenz und Tarnung
+    %h2.date Eröffnung am 5. 06. 2013 - 19 Uhr
+    %h2.date Ausstellungsdauer 05.- 18. 06. 2013 
+    %h2.date Ausstellungsrede: Mag. Birgit Laback
+
+    %p Time Gates heißt eine seit 2011 stetig wachsende und mittlerweile 16 Arbeiten umfassende Serie von Monika Piorkowska. Ausgangspunkt der einzelnen Arbeiten ist dabei jedes Mal der performative Akt des Dialogs zwischen dem jeweils Dargestellten und der Künstlerin. Wirken die Sujets der Arbeiten von Piorkowska auf den ersten Blick wie beiläufige Darstellungen von Alltagsszenen und wie zufällig geknipst, wird ihre aufwendig konstruierte Inszenierung erst auf den zweiten Blick offensichtlich. Indem sich Piorkowska mit der Struktur der Erzählung beschäftigt, sie dekonstruiert, beschäftigt sie sich mit sozialen Mechanismen, deren Regelwerk in erzählerische Motive gekleidet wird. Es geht um Tabus in der Erotik, Geschlechtsverständnis, Geschichte, Rassismus oder Unrecht in der sozialen Stellung. Im Offenlassen an Bedeutung (durch das Oszillieren zwischen den einzelnen Abbildungen, Texten oder Bildtiteln), die den Rezipienten zu einer Stellungnahme zwingt, leistet sie zivilen Widerstand.
+    <br>
+    %p Öffnungszeiten Täglich 16-18 Uhr, oder nach telefonischer Vereinbarung +43 6503502077
+    <br>
+    %p.date Kuratorin: Mag. Birgit  Laback
+
+    <hr class="hr-top">
+    <hr class="hr-bottom">
+
+    %h1.big-title Um:Druck-Gespräche Frühjahr 2013
+    %h2.sub-title Positionen und Fragen aktueller Druckgraphik
+
+    %p.main-intro-text Die Um:Druck-Gespräche im Frühjahr 2013 begleiten in.print.out mit Vortrags- und Diskussionsabenden, um die aktuellen Themen und Tendenzen der Ausstellung mit internationalen Gästen zu diskutieren.
+    %p.main-intro-text Eine Veranstaltungsreihe des Instituts für Wissenschaft und Kunst in Zusammenarbeit mit Um:Druck – Zeitschrift für Druckgraphik und visuelle Kultur im Wiener Künstlerhaus.
+    %p Die Veranstaltungen finden in englischer Sprache statt, mit deutschsprachigen Vorausinformationen sowie zusammenfassenden Übersetzungen.
+    %p.art Moderation: Philipp Maurer
+    %p.art Organisation: Georg Lebzelter, Philipp Maurer, Michael Wegerer
+   
+    <br>
+
+
+    <hr class="hr-top">
+    %h2.sub-title Arbeit mit dem Material
+
+    %h3.date 19. April 2013 - 17 Uhr: Fay Nicolson, Großbritannien
+    %p.main-intro-text Ein Performance-Vortrag zur These Joseph Albers’: „Am Anfang steht das Material.“
+
+    <br>
+
+    <hr class="hr-top">
+    %h2.sub-title Drucktechnik – der wesentlicher Teil der Aussage
+    %h3.date 2. Mai 2013 - 18 Uhr: Ondrej Michálek, Tschechische Republik
+    %p.main-intro-text Arbeiten von Ondrej Michálek sind in der Triennale und vom 17.4. bis 18.5.2013 im Tschechischen Zentrum, 1010 Wien, Herrengasse 17 zu sehen.
+    
+    <br>
+
+    <hr class="hr-top">
+    %h2.sub-title Hard Copies zwischen Begrenzung und Verbreitung.
+    %h3.date 16. Mai 2013 - 18 Uhr: Jo Stockham, Großbritannien
+    %p.main-intro-text Jo Stockham, Künstlerin, Professorin und Vorstand des Printmaking Department, Royal College of Art, London
+   
+    <br>
+    
+    <hr class="hr-top">
+    %h2.sub-title Die erweiterte Druckgraphik
+    %h3.date 6. Juni 2013 - 18 Uhr: Scott Betz, USA
+    %p.main-intro-text Scott Betz, Künstler, Professor am Center for Design Innovation der University of North Carolina 
+    <hr class="hr-bottom">
+    %p.main-intro-text Führungen durch die Ausstellung in.print.out mit Georg Lebzelter:
+    %p.main-intro-text  Mittwoch, 8. Mai, 16 Uhr
+    %p.main-intro-text Donnerstag, 6. Juni 16 Uhr
+
+    %p Alle Veranstaltungen bei freiem Eintritt im Wiener Künstlerhaus, 1010 Wien, Karlsplatz 5.
+    Detaillierte Programminformationen: 
+    www.umdruck.at
+    www.univie.ac.at/iwk
+
+    %p Monat der Grafik > siehe excel Dokument
