refined program page

--- a/app/assets/stylesheets/_program.css.scss
+++ b/app/assets/stylesheets/_program.css.scss
@@ -16,7 +16,6 @@
   border-right: solid 1px white;
   border-left: solid 1px white;
   margin-bottom: 10px;
-  margin-top: 40px
 }
 
 .hr-top {
@@ -36,4 +35,8 @@
 
 .padding-big {
   padding-top: 60px;
+}
+
+.padding-bottom {
+  padding-bottom: 40px;
 }
