changes title on exhibition page

--- a/app/views/static_pages/exhibition.html.haml
+++ b/app/views/static_pages/exhibition.html.haml
@@ -1,4 +1,4 @@
-= provide(:title, 'Exhibition')
+= provide(:title, 'Austellung')
 .container
   #exhibition-page
   %h1.big-title in.print.out - Grafik in/auswendig
