removes white border next to logo on small devices

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -163,6 +163,9 @@ body {
     float: none;
     text-align: center;
   }
+  .logo {
+    border-right: 2px solid black;
+  }
 } 
 
 @media screen and (max-width: 550px) {
