--- a/app/views/static_pages/exhibition.html.haml
+++ b/app/views/static_pages/exhibition.html.haml
@@ -1,6 +1,8 @@
 = provide(:title, 'Austellung')
 .container
   #exhibition-page
+  %h1.context-title.image-box IDEE PROZESS FREI ZEICHEN
+
   %h1.big-title in.print.out - Grafik in/auswendig
   %h3.date 19.04. - 09.06. 2013
   %h3.location Künstlerhaus Wien
