--- a/app/views/static_pages/program.html.haml
+++ b/app/views/static_pages/program.html.haml
@@ -1,6 +1,8 @@
 = provide(:title, "Begleitprogramm")
 .container
   #program-page
+    %h1.context-title.image-box MEHR
+
     %h1.big-title k/hausgalerie
     %h2.sub-title Josef Albers -  Interaction of Color 
     %h3.date 20.4. - 12.5.2013
