--- a/app/views/static_pages/project.html.haml
+++ b/app/views/static_pages/project.html.haml
@@ -1,14 +1,13 @@
 = provide(:title, 'Plakatkunstprojekt')
 .container
   #project-page 
+    %h1.context-title.image-box GELD MACHT SICHT BAR
+
     %h1.big-title Plakatkunstprojekt 
     %h1.sub-sub-title GELD MACHT SICHT BAR
-    %h2.sub-title Im Rahmen von in.print.out - Grafik in/auswendig  
     
-    %p.main-intro-text Mit dem <strong>europäischen Plakatkunstprojekt</strong>, initiiert von den Kuratoren Josef Danner und Georg Lebzelter in Kooperation mit International <strong>Print Network und EPAMEDIA</strong> (europäische Plakat-und Aussenmedien GmbH), setzen im Mai 2013 18 internationale KünstlerInnen grafische Zeichen auf <strong>Plakatwände im öffentlichen Raum.</strong>
-    <br>
-    %p.main-intro-text Die Intention von <strong>GELD MACHT SICHT BAR</strong> ist eine künstlerische Neucodierung der Zeichensprache des öffentlichen Raums durch das Medium Plakat. Dieses Medium, das seit dem 19. Jahrhundert immer wieder grafisch innovative Impulse setzte, soll durch die Ideen heutiger, arrivierter internationaler KünstlerInnen neu thematisiert und belebt werden. Die Intention ist die <strong>Rückeroberung, die De -und Recodierung</strong> des öffentlichen Appellraums durch verfremdende künstlerische Eingriffe. 
-    <br>
+    %p.main-intro-text <strong>Plakatwand als Demonstrationswand</strong> ist ein europäisches Kunstprojekt von Josef Danner/Georg Lebzelter in Kooperation mit <strong>International Print Network und EPAMEDIA</strong>. Internationale KünstlerInnen setzen grafische Zeichen auf Plakatwänden. Das Hauptanliegen: Eine künstlerische <strong>Neucodierung</strong> der Zeichensprache des öffentlichen Raums anhand des Mediums Plakat. Das Plakat, das seit dem 19. Jh. immer wieder grafisch innovative Impulse setzte, soll mit den Ideen heutiger internationaler KünstlerInnen mit hoher Qualität neu thematisiert und belebt werden.
+    
     .exhibition-pic
       =image_tag("pic02.jpg", :alt => "pic01")
     %p.artist Shunji Nii Nomi - Save me - 2008 
@@ -19,15 +18,15 @@
     <br>
     %h2.artists-headline Teilnehmende KünstlerInnen
     %p.art.one-column 
-      Team Lucia Dellefant / Anton Petz, Deutschland,<strong>Österreich</strong><br>
-      Team Josef Danner / Hüseyin Isik, Österreich, <strong>Türkei</strong><br>
-      Team Georg Lebzelter / Nikolaus Link, <strong>Österreich</strong><br>
-      Team Ammar Abo Bakr / Aya Tarek, <strong>Ägypten</strong><br>
-      Team Andraschek / Lobnig, <strong>Österreich</strong><br>
-      Endi Poskovic, <strong>Vereinigte Staaten</strong><br>
-      Julius Deutschbauer, <strong>Österreich</strong><br>
-      Ingeborg Strobl, <strong>Österreich</strong><br>
-      Werner Reiterer, <strong>Österreich</strong><br>
-      Klaus Staeck, <strong>Deutschland</strong><br>
-      Dan Perjovschi, <strong>Rumänien</strong><br>
-      Erwin Wurm, <strong>Österreich</strong><br>
+      Team Stepan červenka / Georg Lebzelter / Nikolaus Link --<strong> AT / CZ</strong><br>
+      Team Josef Danner / Hüseyin Isik, Österreich -- <strong> TR</strong><br>
+      Team Lucia Dellefant / Anton Petz --<strong> AT / DE</strong><br>
+      Team Ammar Abo Bakr / Aya Tarek -- <strong> EG</strong><br>
+      Team Andraschek / Lobnig -- <strong> AT</strong><br>
+      Julius Deutschbauer -- <strong> AT</strong><br>
+      Ingeborg Strobl -- <strong> AT</strong><br>
+      Werner Reiterer -- <strong> AT</strong><br>
+      Dan Perjovschi --<strong> RO</strong><br>
+      Endi Poskovic --<strong> US</strong><br>
+      Klaus Staeck -- <strong> DE</strong><br>
+      Erwin Wurm -- <strong> AT</strong><br>
