--- a/app/views/static_pages/symposium.html.haml
+++ b/app/views/static_pages/symposium.html.haml
@@ -1,6 +1,8 @@
 = provide(:title, "Symposium")
 .container
   #symposium-page
+    %h1.context-title.image-box PLAKAT MACHT ZEIT ZEICHEN
+
     %h1.big-title Symposium
     %h2.sub-title Das Plakat - ein Medium zwischen Kunst und Kommerz
     %h3.date 24 - 25.05.2013
