--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -6,4 +6,6 @@
       %li
         %a{ :href => '#' } MAP
       %li
-        %a{ :href => '#' } IMPRESSUM 
+        %a{ :href => 'http://www.facebook.com/pages/inprintout/252270788238577', :target => '_blank' } FB
+      %li
+        %a{ :href => 'http://triennale.tumblr.com', :target => '_blank' } BLOG
