--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,14 +8,8 @@
  
     .social-media
       .top
-        = link_to image_tag("white-fb-icon-hover.png", :class => "top")
-        = link_to image_tag("white-fb-icon.png", :class => "bottom")       
-        = link_to image_tag("white-tumblr-icon-hover.png", :class => "top")
-        = link_to image_tag("white-tumblr-icon.png", :class => "top")
-
-
-
-      //= link_to image_tag("white-fb-icon.png", :mouseover => "white-fb-icon-hover.png", :alt => "Facebook-Link", :class => ""), "http://www.facebook.com/", :target => "_blank"
-      //= link_to image_tag("white-tumblr-icon.png", :mouseover => "white-tumblr-icon-hover.png", :alt => "Tumblr-Link", :class => ""), "http://www.tumblr.com/", :target => "_blank"
-
+        = link_to image_tag("white-fb-icon-hover.png", :class => "top"), "http://www.facebook.com/pages/inprintout/252270788238577", :target => "_blank"
+        = link_to image_tag("white-fb-icon.png", :class => "bottom"), "http://www.facebook.com/pages/inprintout/252270788238577", :target => "_blank"       
+        = link_to image_tag("white-tumblr-icon-hover.png", :class => "top"), "http://triennale.tumblr.com", :target => "_blank"
+        = link_to image_tag("white-tumblr-icon.png", :class => "top"), "http://triennale.tumblr.com", :target => "_blank"
 
