--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,11 +1,11 @@
 = provide(:title, 'Home')
-%h1.context-title.image-box GELD MACHT SICHT BAR
+%h1.context-title.image-box.padding-bottom-small GRAFIK IN / AUSWENDIG
 
 %section
   %p.intro-text.main-intro-text.padding-bottom Das Wiener Künstlerhaus veranstaltet 2013 mit in.print.out im Rahmen der Partnerschaft mit International Print Network (IPNet) erneut eine Großausstellung aktueller, internationaler, künstlerischer Grafik. Ergänzt wird die Ausstellung durch eine Werkschau historischer und aktueller Plakatkunst, das Plakatprojekt für den öffentlichen Raum GELD MACHT SICHT BAR sowie weiteren Begleitprogrammen.
 
-%h2.big-title Ausstellungsraum <br /> & <br /> Plakatwand
-%h3.small-title Internationale Grafik im Künstlerhaus
+%h2.big-title.center Ausstellungsraum <br /> & <br /> Plakatwand
+%h3.small-title.center Internationale Grafik im Künstlerhaus
   
 %section
   .image-boxes
