replaces the images for the artists on home, project and program pages

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,6 +39,11 @@ body {
   border: solid 4px #fbfbfb;
 }
 
+.credits {
+  margin-top: 10px;
+  text-align: center;
+}
+
 @media screen and (max-width: 960px) {
   .image-boxes {
         height: 1000px;
