--- a/app/views/static_pages/exhibition.html.haml
+++ b/app/views/static_pages/exhibition.html.haml
@@ -16,7 +16,8 @@
   <br>
   
   .exhibition-pic
-    = image_tag("pic01.jpg", :alt => "pic01")
+    = image_tag("pic01.jpg", :alt => "Picture of a caktus hear from Yossi Lernel called In Mexico City from 2008")
+    %p.credits © Moravian Gallery in Brno
 
   %p.artist Yossi Lernel - In Mexico City - 2008
   
