--- a/app/views/static_pages/program.html.haml
+++ b/app/views/static_pages/program.html.haml
@@ -9,9 +9,19 @@
     %h3.date  Eröffnung 19.4.2013 - 19 Uhr
 
     %p.main-intro-text <strong>Anlässlich des 125 Geburtstages von Josef Albers</strong>
-    %p.main-intro-text „interaction of color“ besteht aus 81 losen Doppel-Farb-Tafeln, davon 152 Originalsiebdrucken mit 580 gedruckten Farben. Die amerikanische Ausgabe erschien 1963 bei der yale university press und die deutsche Ausgabe 1973 im Josef Keller Verlag, Starnberg.<br><br> Gezeigt wird die deutsche Ausgabe von Albers' berühmter Farbtheorie. Albers widmete diese Publikation seinen Schülern: "Dieses Buch ist mein Dank an meine Studenten". Josef Albers stellt in diesem Mappenwerk die Praxis des Betrachtens von Farbe vor die akademische Tradition der Farbtheorie. Phänomene wie Farbtäuschung, Transparenz und Raumillusion, Farbtemperatur, Helligkeitswert und viele andere werden durch das Sehen hinterfragt. Dieses Lehr-Werk ist nicht nur ein Schlüssel zum Werk von Josef Albers sondern zur Wirkung von Farbe überhaupt.
+    %p.main-intro-text „interaction of color“ besteht aus 81 losen Doppel-Farb-Tafeln, davon 152 Originalsiebdrucken mit 580 gedruckten Farben. Die amerikanische Ausgabe erschien 1963 bei der yale university press und die deutsche Ausgabe 1973 im Josef Keller Verlag, Starnberg.
+
+    
+    <br> 
+    %p.main-intro-text Gezeigt wird die deutsche Ausgabe von Albers' berühmter Farbtheorie. Albers widmete diese Publikation seinen Schülern: "Dieses Buch ist mein Dank an meine Studenten". Josef Albers stellt in diesem Mappenwerk die Praxis des Betrachtens von Farbe vor die akademische Tradition der Farbtheorie. Phänomene wie Farbtäuschung, Transparenz und Raumillusion, Farbtemperatur, Helligkeitswert und viele andere werden durch das Sehen hinterfragt. Dieses Lehr-Werk ist nicht nur ein Schlüssel zum Werk von Josef Albers sondern zur Wirkung von Farbe überhaupt.
     %p.date.padding Kurator: Fritz Ruprechter
     
+    .exhibition-pic
+      = image_tag("Albers.jpg", :alt => "Grafik from Albers")
+      %p.credits „interaction of color“ - 1963
+    %p.artist-horizontal Josef Albers 
+
+
     %h1.big-title.padding-big kresh 
     %h2.sub-title “Im”possibilities
     %h3.date 17.5. - 16.6.2013
