--- a/app/views/static_pages/symposium.html.haml
+++ b/app/views/static_pages/symposium.html.haml
@@ -15,8 +15,8 @@
     %p.main-intro-text <strong>Konzept und Organisation:</strong> Sergius Kodera, Georg Lebzelter
     <br>
     .exhibition-pic
-      =image_tag("pic03.jpg", :alt => "pic02")
-    %p.artist Magdalena Duda-Patraszewska - Futro 2 - 2011
+      =image_tag("pic02.jpg", :alt => "pic02")
+    %p.artist Shunji Nii Nomi - save me - 2008 
     <br>
     %h2.artists-headline TeilnehmerInnen
     %p.art.one-column 
