--- a/app/assets/stylesheets/_exhibition.css.scss
+++ b/app/assets/stylesheets/_exhibition.css.scss
@@ -75,6 +75,20 @@ p strong {
     float: right;
  }
 
+ .artist-horizontal {
+   @extend .artist;
+   @include text-shadow(
+    rgba(#000,.00) 0px 436px 0,
+    rgba(#000,.00) 0px 374px 0,
+    rgba(#000,.06) 0px 312px 0,
+    rgba(#000,.08) 0px 250px 0,
+    rgba(#000,.2) 0px 184px 0,
+    rgba(#000,.4) 0px 122px 0,
+    rgba(#000,.5) 0px 62px 0 );
+
+  margin-top: 4%;
+ }
+
 .artists-headline {
   @include span-columns(12);
   clear: both;
