--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -12,13 +12,13 @@
     .box01.center
       = image_tag("pic01.jpg", :alt => "pic01", :class => ".box01")
     .box02.center
-      = image_tag("pic02.jpg", :alt => "pic02", :class => ".box02")
+      = image_tag("Ingeborg_Strobl_Geld-macht-sichtbar_Plakat.jpg", :alt => "Bild zum Plakatkunstprojekt Geld Macht Sicht Bar", :class => ".box02")
 
     .box03.center
-      = image_tag("pic03.jpg", :alt => "pic03", :class => ".box03")
+      = image_tag("pic02.jpg", :alt => "pic03", :class => ".box03")
 
     .box04.center
-      = image_tag("pic04.jpg", :alt => "pic04", :class => ".box04")
+      = image_tag("Albers.jpg", :alt => "pic04", :class => ".box04")
 
 %section
   %p.text-column.main-intro-text Die Ausstellung in.print.out stellt aktuelle Tendenzen der internationalen Grafikkunst in einen neuen Kontext mit temporären Arbeiten, Installationen und raumbezogenen grafischen Experimenten. Schwerpunktmäßig im Bereich der bildenden Kunst angesiedelt, behandelt in.print.out das Phänomen Grafik in seiner Komplexität als künstlerisches Ausdrucksmedium, als Schnittstelle zwischen der traditionellen Disziplin der Druckgrafik und neuester, innovativer Techniken, zwischen analogen und digitalen Medien, zwischen bedrucktem Papier und interaktiven Installationen sowie in seiner gesellschaftlichen Funktion als Plakat.
