--- a/app/views/static_pages/project.html.haml
+++ b/app/views/static_pages/project.html.haml
@@ -9,8 +9,8 @@
     %p.main-intro-text <strong>Plakatwand als Demonstrationswand</strong> ist ein europäisches Kunstprojekt von Josef Danner/Georg Lebzelter in Kooperation mit <strong>International Print Network und EPAMEDIA</strong>. Internationale KünstlerInnen setzen grafische Zeichen auf Plakatwänden. Das Hauptanliegen: Eine künstlerische <strong>Neucodierung</strong> der Zeichensprache des öffentlichen Raums anhand des Mediums Plakat. Das Plakat, das seit dem 19. Jh. immer wieder grafisch innovative Impulse setzte, soll mit den Ideen heutiger internationaler KünstlerInnen mit hoher Qualität neu thematisiert und belebt werden.
     
     .exhibition-pic
-      =image_tag("pic02.jpg", :alt => "pic01")
-    %p.artist Shunji Nii Nomi - Save me - 2008 
+      =image_tag("Ingeborg_Strobl_Geld-macht-sichtbar_Plakat.jpg", :alt => "Plakat zum Plakatkunstprojekt Geld Macht Sicht Bar")
+    %p.artist Ingeborg Strobl - Geld macht sichtbar
     <br>
     %p.main-intro-text GELD MACHT SICHT BAR platziert künstlerische Botschaften in jenem Raum, der üblicherweise von <strong>Werbebotschaften und Kaufparolen</strong> okkupiert wird und sorgt mit künstlerischen Mitteln für entgegenwirkende Irritation. <strong>18 nationale und internationale KünstlerInnen</strong> bzw. KünstlerInnenteams entwickeln 8 - Bogen Plakate. Ein gemeinsames, auf allen Plakaten wiederkehrendes Logo verbindet die Plakatserie. Die Auswahl der KünstlerInnen erfolgte durch den internationalen Wettbewerb der Triennale in Krakau und durch Nominierungen der beiden Kuratoren.
     <br>
