changes program picture back to vertical view

--- a/app/views/static_pages/program.html.haml
+++ b/app/views/static_pages/program.html.haml
@@ -19,7 +19,7 @@
     .exhibition-pic
       = image_tag("Albers.jpg", :alt => "Grafik from Albers")
       %p.credits „interaction of color“ - 1963
-    %p.artist-horizontal Josef Albers 
+    %p.artist Josef Albers 
 
 
     %h1.big-title.padding-big kresh 
