removes public/index.html file

--- a/app/views/static_pages/program.html.haml
+++ b/app/views/static_pages/program.html.haml
@@ -149,5 +149,5 @@
     %p.main-intro-text Detaillierte Programminformationen: 
     %p.main-intro-text www.umdruck.at
     %p.main-intro-text www.univie.ac.at/iwk
-
-    %p.main-intro-text  Monat der Grafik > siehe excel Dokument
+    <br>
+    / %p.main-intro-text  Monat der Grafik > siehe excel Dokument
