changes link to k-haus page

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -4,7 +4,7 @@
     .k-h-wrapper
       = link_to image_tag("K-Haus-Logo-non-hover.jpg", :mouseover => "K-Haus-Logo-hover.jpg", :alt => "Künstlerhaus-Logo-Link", :class => "k-h_logo"), "http://www.k-haus.at/", :target => "_blank"
       .k-h-logo-text
-        = link_to image_tag("Kuenstlerhaus.jpg", :alt => "Kuenstlerhaus-Link", :class => ""), "http://www.k-haus.at/", :target => "_blank"
+        = link_to image_tag("Kuenstlerhaus.jpg", :alt => "Kuenstlerhaus-Link", :class => ""), "http://www.k-haus.at/de/ausstellungen/vorschau/169/in.print.out.html", :target => "_blank"
  
     .social-media
       .top
